# floret

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/floret/: __init__.py
src/floret/command_line/: __init__.py
tests/: test_floret.py
